--- a/app/src/main/res/layout/activity_get_information.xml
+++ b/app/src/main/res/layout/activity_get_information.xml
@@ -194,6 +194,6 @@
         android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Report Asset Status" />
+        android:text="Report Asset" />
 
 </LinearLayout>
