--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.prince.assetManagement.Bill"
+    tools:context="com.prince.assetManagement.Unused.Bill"
     android:orientation="vertical"
     android:gravity="center">
 
