--- a/app/src/main/res/layout/fragment_geotag.xml
+++ b/app/src/main/res/layout/fragment_geotag.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.prince.assetManagement.Geotag"
+    tools:context="com.prince.assetManagement.Unused.Geotag"
     android:orientation="vertical"
     android:gravity="center">
 
