--- a/app/src/main/res/layout/fragment_issue.xml
+++ b/app/src/main/res/layout/fragment_issue.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Issue"
+    tools:context=".Unused.Issue"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
