--- a/app/src/main/res/layout/activity_reported_assets.xml
+++ b/app/src/main/res/layout/activity_reported_assets.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ReportedAssets">
-    
-    <android.support.v7.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view">
-    </android.support.v7.widget.RecyclerView>
+        android:id="@+id/recycler_view"></androidx.recyclerview.widget.RecyclerView>
     
 
 </RelativeLayout>
