--- a/app/src/main/res/layout/activity_admin_asset_request.xml
+++ b/app/src/main/res/layout/activity_admin_asset_request.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".AdminAssetRequest">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
