--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -86,6 +86,17 @@
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="240dp" />
 
+    <Button
+        android:id="@+id/delete_assets"
+        android:layout_width="143dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="Delete Assets"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteY="240dp" />
+
 
     <TextView
         android:id="@+id/logout"
