--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/abs"
     android:gravity="center"
-    android:orientation="vertical"
+    android:id="@+id/gridview"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".WelcomeActivity"
-    tools:showIn="@layout/activity_welcome">
+    android:columnWidth="90dp"
+    android:horizontalSpacing="10dp"
+    android:stretchMode="columnWidth"
+    android:verticalSpacing="10dp"
+    tools:showIn="@layout/activity_welcome" />
 
     <!--<Button-->
     <!--android:id="@+id/listen"-->
@@ -20,91 +23,3 @@
     <!--android:layout_marginBottom="59dp"-->
     <!---->
     <!--android:text="Start recognition" />-->
-    <Button
-        android:id="@+id/add_asset"
-        android:layout_width="143dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Add an Asset"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="159dp" />
-
-    <Button
-        android:id="@+id/scan_asset"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Scan an Asset"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <Button
-        android:id="@+id/search_asset"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Search Asset"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <Button
-        android:id="@+id/add_users"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Add Users"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <Button
-        android:id="@+id/reported_assets"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Reported Assets"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <Button
-        android:id="@+id/asset_requests"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Asset Requests"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <Button
-        android:id="@+id/delete_assets"
-        android:layout_width="143dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/colorAccent"
-        android:text="Delete Assets"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-
-    <TextView
-        android:id="@+id/logout"
-        android:layout_width="105dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="20dp"
-        android:text="Logout"
-        android:textAlignment="center"
-        android:textSize="20sp" />
-
-</LinearLayout>
